[package]
name = "ibmcloud-core"
version = "0.1.0"
authors = ["rogerio.ferreira@ibm.com <Rogerio Ferreira>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["json"] }
serde_json = "1.0.64"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.40"