[package]
name = "ibmcloud-core"
version = "0.1.1"
authors = ["rogerio.ferreira@ibm.com <Rogerio Ferreira>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rogeriob2br/ibmcloud-core"
description = "This crate for IBM Cloud is an abstraction from de api referenced in docs. "
exclude = [
    ".github",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["json"] }
serde_json = "1.0.64"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.40"


